--- a/Travel/index.html
+++ b/Travel/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-HK">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Explore Japan</title>
+  <title>Web Travel</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>Welcome to Japan</h1>
+    <img class="logo" src="./Logo.jpeg" alt="Wanderlust Journeys">
+    <h1>Welcome to Wanderlust Journeys 🧚‍♀️ 樂遊谷 🧚‍♀️</h1>
     <nav>
-      <ul>
-        <li><a href="#culture">Culture</a></li>
-        <li><a href="#places">Places to Visit</a></li>
-        <li><a href="#food">Cuisine</a></li>
-      </ul>
+      <div class="main">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#culture">Culture</a></li>
+          <li><a href="#places">Places to Visit</a></li>
+          <li><a href="#food">Cuisine</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
+
+  <div class="videoContainer">
+    
+  </div>
 
   <section id="culture">
     <h2>Culture</h2>
